# z-sight

./: Cargo.toml  MANUAL.md  README.md  test_sysinfo.rs
src/: alerts.rs  logger.rs  main.rs  processes.rs  swap.rs  system.rs  ui.rs  zram.rs
